# MGKDB

./: .gitignore  D_chi_ratio_mgkdb.py  ParIO.py  README.md  calc_mode_info_mgkdb.py  calc_omega_from_field.py  diag_plot.py  finite_differences.py  format_files_mgkdb.py  get_not_uploaded.py  get_nrg.py  gui_support.py  gui_utils.py  mgk_clear_ex.py  mgk_download.py  mgk_file2db.py  mgk_file_handling.py  mgk_file_handling_gui.py  mgk_folder2file.py  mgk_gui.py  mgk_login.py  mgk_post_processing.py  mgk_py_interface.py  mgk_search_tools.py  mgk_uploader.py  mode_tools_mgkdb.py  nrgWrapper.py  pyproject.toml  pyro_create_combined.py  requirements.txt  setup.py  simple demo.py  template_download.py  template_upload.py  template_user_input.yaml  test_pyro_cgyro.py  test_pyro_gene.py
conda_env/: additions.txt  environment.yml  environment_312.yml  environment_old.yml  environment_py39.yml  requirements.txt
data/: base_file.py  data.py  nrgdata.py  profiledata.py
data_cgyro_single/: gyrokinetics.json
data_curation/: curate_data_gx.py
data_linear_multi/: autopar_0001  autopar_0019  averaged3_000100  averaged3_000400  averaged3_000700  averaged3_001000  averaged3_001300  averaged3_001600  averaged3_001900  averaged3_002200  averaged3_002500  avg3_kz_kperp_omd_0001  avg3_kz_kperp_omd_0004  avg3_kz_kperp_omd_0007  avg3_kz_kperp_omd_0010  avg3_kz_kperp_omd_0013  avg3_kz_kperp_omd_0016  avg3_kz_kperp_omd_0019  avg3_kz_kperp_omd_0022  avg3_kz_kperp_omd_0025  energy_0001  energy_0002  energy_0003  energy_0004  energy_0005  energy_0006  energy_0007  energy_0008  energy_0009  (+141 more)
(+168 files in other folders)
