[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MGKDB"
version = "0.1.0"
description = "Tools to acess MongoDB for nuclear fusion simulations"
authors = [
"Craig Michoski <michoski@gmail.com>",
"Venkitesh Ayyar <venkiteshayyar@gmail.com>",
"Dongyang Kuang <dykuangii@gmail.com>",
"David Hatch <drdrhatch@googlemail.com>"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy==1.24.3', 
    'h5py', 'bson', 'pymongo'
]

[project.urls]
Homepage = "https://github.com/Sapientai/MGKDB"


[tool.setuptools]
package_dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

